# wabbajack-library-cleaner

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CNAME  Cargo.toml  LICENSE  README.md  TESTING.md  TODO.md  TODO_FOR_NEXT_AI.md  agent.md  build.rs  claude.md  fileops.go  go.mod  gui.go  recyclebin_unix.go  recyclebin_windows.go  test.wabbajack  test_parse_live.go  test_parser.go  unix.go  wabbajack-library-cleaner-test  wabbajack-library-cleaner.go  wabbajack-library-cleaner_test.go  windows.go
.github/workflows/: ci.yml  release.yml  test.yml
legacy_go/: fileops_test.go  go.mod  go.sum  rsrc_windows_386.syso  rsrc_windows_amd64.syso  unix.go  wabbajack-library-cleaner.go  winres.json
rust-version/: Cargo.toml  README.md
rust-version/src/: main.rs
rust-version/src/core/: cleaner.rs  parser.rs  scanner.rs
rust-version/src/gui/: app.rs
src/: main.rs
src/core/: cleaner.rs  mod.rs  parser.rs  scanner.rs  types.rs
src/gui/: app.rs  mod.rs
tests/: integration_test.rs
tests/fixtures/: real_modlist.json  sample_modlist.json
